[package]
name = "clix"
version = "0.1.0"
authors = ["codingcat <istommao@gmail.com>"]
repository = "https://github.com/istommao/clix"
description = "A command alias extension"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
